--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^6.0.0",
     "emailjs-mime-builder": "^2.0.5",
     "googleapis": "^27.0.0",
     "js-base64": "^2.4.5",
