--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "tutor-email",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A NodeJS app for auto-drafting tutoring emails based on Excel spreadsheet data",
+  "main": "email.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
